# MountainPathFinder

./: Makefile.am  README.md  build.sh  configure.ac  graphics
header/: cmdline.h  data-read.h  dijkstraAlgo.h  dpAlgo.h  logic.h
src/: Makefile.am  cmdline.c  data-read.c  dijkstraAlgo.c  dpAlgo.c  logic.c
